# assoc_static

./: Cargo.toml  README.md
src/: lib.rs
tests/: integration.rs
