[package]
name = "assoc_static"
version = "1.0.0-pre0"
license = "MIT OR Apache-2.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "Associate static objects to types"
repository = "https://github.com/cehteh/assoc_static.git"
edition = "2021"
keywords = ["static", "generic"]

[badges]
maintenance = { status = "actively-developed" }
